RESOLVED FIXED253026
Regression(255659@main) Unable to log into twitch.tv
https://bugs.webkit.org/show_bug.cgi?id=253026
Summary Regression(255659@main) Unable to log into twitch.tv
Chris Dumez
Reported 2023-02-27 14:05:21 PST
Unable to log into twitch.tv since 255659@main.
Attachments
Chris Dumez
Comment 1 2023-02-27 14:05:29 PST
Chris Dumez
Comment 2 2023-02-27 14:26:16 PST
EWS
Comment 3 2023-02-28 08:26:07 PST
Committed 260944@main (541ca5a79560): <https://commits.webkit.org/260944@main> Reviewed commits have been landed. Closing PR #10760 and removing active labels.
Chris Dumez
Comment 4 2023-03-25 19:38:36 PDT
*** Bug 254368 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.