Cherry-pick 541ca5a79560. rdar://problem/105891522

Regression(255659@main) Unable to log into twitch.tv
    https://bugs.webkit.org/show_bug.cgi?id=253026
    rdar://105891522

    Reviewed by Wenson Hsieh and Darin Adler.

    The Twitch.tv login was failing because `screen.orientation` was returning
    "portrait-primary" on macOS. The natural/default orientation on desktop should
    be "landscape-primary" so this was confusing Twitch.

    Also update our `screen.angle` logic to take into account the natural
    orientation based on:
    - https://w3c.github.io/screen-orientation/#dfn-screen-orientation-values-table

    I have verified that Chrome on macOS returns "landscape-primary" for the type
    and 0 for the angle. Our behavior is now aligned.

    * LayoutTests/fast/screen-orientation/natural-orientation-expected.txt: Added.
    * LayoutTests/fast/screen-orientation/natural-orientation.html: Added.
    * LayoutTests/platform/ios/screen-orientation/natural-orientation-expected.txt: Added.
    * Source/WebCore/page/ScreenOrientation.cpp:
    (WebCore::ScreenOrientation::lock):
    * Source/WebCore/page/ScreenOrientationType.h:
    (WebCore::naturalScreenOrientationType):
    * Source/WebCore/platform/ScreenOrientationProvider.cpp:
    (WebCore::ScreenOrientationProvider::currentOrientation):
    * Source/WebKit/WebProcess/WebCoreSupport/WebScreenOrientationManager.cpp:
    (WebKit::WebScreenOrientationManager::currentOrientation):

    Canonical link: https://commits.webkit.org/260944@main

Canonical link: https://commits.webkit.org/259548.362@safari-7615-branch